# pit38-ibkr

./: .dockerignore  .env  .gitignore  Dockerfile  Makefile  OBJECTIVE.md  README.md  docker-compose.yml  pyproject.toml
.opencode/: opencode.json
src/: core.py  exceptions.py  main.py  nbp_api_client.py  report_converter.py  script.py  transactions.py
