[project]
name = "pit38-ibkr"
version = "0.1.0"
description = "Template Python project with uv and Docker Compose"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "strictly-typed-pandas>=0.3.6",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = false

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100
py_version = 313

[tool.mypy]
python_version = "3.13"
files = ["src"]
check_untyped_defs = true
